--- a/pagina/html/index.html
+++ b/pagina/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <meta http-equiv="X-UA-Compatible" content='IE=Edge'>
-        <meta name='viewport' content='width=width-device, initial-scale=1'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <title>Phoenix Info</title>
 
         <link href='../css/page.css' rel='stylesheet' type='text/css'/>
@@ -18,7 +18,7 @@
                 <span class="hamburguer"></span>
                 <span class="hamburguer"></span>
             </label>
-            <nav>
+            <nav id="menuzin">
                 <ul class="menu">
                     <li><a href="#">Riot Games</a></li>
                     <li><a href="#">Agentes</a></li>
@@ -128,6 +128,7 @@
                 </div>
             </ul>
         </div>
+        <script src="../js/menu.js"></script>
     </body>
     <footer>
         <div id="obs">
