--- a/pagina/html/index.html
+++ b/pagina/html/index.html
@@ -9,6 +9,7 @@
         <link href='../css/page.css' rel='stylesheet' type='text/css'/>
         <link href="../css/menu.css" rel="stylesheet" type='text/css'/>
         <link href="../css/scrollbar.css" rel="stylesheet" type='text/css'/>
+        <link href="../css/pesquisa.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div id="check-menu">
@@ -26,6 +27,21 @@
                     <li><a href="#">Funções</a></li>
                 </ul>
             </nav>
+        </div>
+
+        <div class="pesquisa">
+            <input type="text" name="pesquisar-agente" id="pesquisar-agente" class='pesquisar-agente-ativo' placeholder="Pesquise um agente">
+            <input type="button" name="pesquisarbt" id="pesquisarbt">
+            <ul class="lista-agentes">
+                <li><a href="#">Reyna</a></li>
+                <li><a href="#">Raze</a></li>
+                <li><a href="#">Sage</a></li>
+                <li><a href="#">Breach</a></li>
+                <li><a href="#">Brimstone</a></li>
+                <li><a href="#">Phoenix</a></li>
+                <li><a href="#">Sova</a></li>
+                <li><a href="#">Skye</a></li>
+            </ul>
         </div>
         
         <div class='spans'>
@@ -128,7 +144,7 @@
                 </div>
             </ul>
         </div>
-        <script src="../js/menu.js"></script>
+        <script src="../js/pesquisar.js"></script>
     </body>
     <footer>
         <div id="obs">
