search result e pagina nao disponivel

--- a/pagina/html/naodisponivel.html
+++ b/pagina/html/naodisponivel.html
@@ -10,6 +10,7 @@
         <link href="../css/menu.css" rel="stylesheet" type='text/css'/>
         <link href="../css/scrollbar.css" rel="stylesheet" type='text/css'/>
         <link href="../css/pesquisa.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/naodisponivel.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div id="check-menu">
@@ -86,74 +87,15 @@
             <div class="agent">
             <div>
                 <ul class='agent-name'>
-                    <p>PHOENIX</p>
-                    <p>PHOENIX</p>
-                    <p>PHOENIX</p>
-                    <p>PHOENIX</p>
-                    <p>PHOENIX</p>
+                    <p>PÁGINA NÃO DISPONÍVEL</p>
+                    <p>PÁGINA NÃO DISPONÍVEL</p>
+                    <p>PÁGINA NÃO DISPONÍVEL</p>
+                    <p>PÁGINA NÃO DISPONÍVEL</p>
+                    <p>PÁGINA NÃO DISPONÍVEL</p>
                 </ul>
             </div>
-            <img class="img-agent" src="../../imgs/phoenix.png" alt="Agente Phoenix">
             </div>
-            <img class='img-funcao' src='../../imgs/funcaoDuelista.png' alt="Função Duelista">
-            <h1 class='funcao'>DUELISTA</h1>
-            <ul class='ul-info'>
-                <div class='info'>
-                    <div class='img-info'>
-                        <img class="hab" src='../../imgs/phoenixHab1.png' alt='Habilidade Labareda'>
-                    </div>
-
-                    <h2>C - LABAREDA</h2>
-                    <p>
-                        EQUIPE uma parede de fogo. DISPARE para criar uma linha de
-                        chamas que avança, gerando uma parede de fogo que bloqueia
-                        a visão e causa dano a jogadores que passarem por ela.
-                        SEGURE O DISPARO para curvá-la na direção da mira.
-                    </p>
-                </div>
-
-                <div class='info'>
-                    <div class='img-info'>
-                        <img class="hab" src='../../imgs/phoenixHab2.png' alt='Habilidade Labareda'>
-                    </div>
-
-                    <h2>Q - BOLA CURVA</h2>
-                    <p>
-                        EQUIPE uma bola de fogo. DISPARE para jogar a bola de fogo,
-                        que explode após um intervalo ou ao atingir o chão, criando uma
-                        zona duradoura de fogo que causa dano aos inimigos.
-                    </p>
-                </div>
-
-                <div class='info'>
-                    <div class='img-info'>
-                        <img class="hab" src='../../imgs/phoenixHab3.png' alt='Habilidade Labareda'>
-                    </div>
-
-                    <h2>E - MÃOS QUENTES</h2>
-                    <p>
-                        EQUIPE um orbe de chamas que avança em curva e detona pouco
-                        após o lançamento. DISPARE para curvá-lo para a esquerda,
-                        detonando e cegando qualquer jogador que vir o orbe. Use o
-                        DISPARO SECUNDÁRIO para curvá-lo para a direita.
-                    </p>
-                </div>
-
-                <div class='info'>
-                    <div class='img-info'>
-                        <img class="hab" src='../../imgs/phoenixUlt.png' alt='Habilidade Labareda'>
-                    </div>
-
-                    <h2>X - RENASCIMENTO</h2>
-                    <p>
-                        INSTANTANEAMENTE coloca um marcador na localização de
-                        Phoenix. Com a habilidade ativa, morrer ou deixar o tempo acabar
-                        encerrarão a habilidade e trarão Phoenix de volta ao local
-                        marcado com Vida completa.
-                    </p>
-                </div>
-            </ul>
-        </div>
+            
         <script src="../js/pesquisar.js"></script>
         <script src="../js/filtrar.js"></script>
     </body>
