--- a/pagina/html/naodisponivel.html
+++ b/pagina/html/naodisponivel.html
@@ -4,7 +4,7 @@
         <meta charset='UTF-8'>
         <meta http-equiv="X-UA-Compatible" content='IE=Edge'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <title>Phoenix Info</title>
+        <title>Info</title>
 
         <link href='../css/page.css' rel='stylesheet' type='text/css'/>
         <link href="../css/menu.css" rel="stylesheet" type='text/css'/>
@@ -22,10 +22,10 @@
             </label>
             <nav id="menuzin">
                 <ul class="menu">
-                    <li><a href="#">Riot Games</a></li>
-                    <li><a href="#">Agentes</a></li>
-                    <li><a href="#">Mapas</a></li>
-                    <li><a href="#">Funções</a></li>
+                    <li><a href="https://www.riotgames.com/pt-br" target="blank">Riot Games</a></li>
+                    <li><a href="naodisponivel.html">Agentes</a></li>
+                    <li><a href="naodisponivel.html">Mapas</a></li>
+                    <li><a href="naodisponivel.html">Funções</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,24 +34,24 @@
             <input type="text" name="pesquisar-agente" id="pesquisar-agente" class='pesquisar-agente-ativo' placeholder="Pesquise um agente">
             <input type="button" name="pesquisarbt" id="pesquisarbt">
             <ul class="lista-agentes pesquisar-agente-ativo">
-                <li class="agenteLi"><a href="#">Kay/o</a></li>
-                <li class="agenteLi"><a href="#">Chamber</a></li>
-                <li class="agenteLi"><a href="#">Neon</a></li>
-                <li class="agenteLi"><a href="#">Brimstone</a></li>
-                <li class="agenteLi"><a href="#">Phoenix</a></li>
-                <li class="agenteLi"><a href="#">Sage</a></li>
-                <li class="agenteLi"><a href="#">Sova</a></li>
-                <li class="agenteLi"><a href="#">Viper</a></li>
-                <li class="agenteLi"><a href="#">Cypher</a></li>
-                <li class="agenteLi"><a href="#">Reyna</a></li>
-                <li class="agenteLi"><a href="#">Killjoy</a></li>
-                <li class="agenteLi"><a href="#">Breach</a></li>
-                <li class="agenteLi"><a href="#">Omen</a></li>
-                <li class="agenteLi"><a href="#">Jett</a></li>
-                <li class="agenteLi"><a href="#">Raze</a></li>
-                <li class="agenteLi"><a href="#">Skye</a></li>
-                <li class="agenteLi"><a href="#">Yoru</a></li>
-                <li class="agenteLi"><a href="#">Astra</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Kay/o</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Chamber</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Neon</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Brimstone</a></li>
+                <li class="agenteLi"><a href="index.html">Phoenix</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Sage</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Sova</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Viper</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Cypher</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Reyna</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Killjoy</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Breach</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Omen</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Jett</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Raze</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Skye</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Yoru</a></li>
+                <li class="agenteLi"><a href="naodisponivel.html">Astra</a></li>
             </ul>
         </div>
         
@@ -104,10 +104,10 @@
             <p id="obs1">
                 THIS WEBSITE WAS MADE FOR STUDY PURPOSES ONLY<br>
                 MADE TO STUDY HTML, CSS AND JAVASCRIPT<br>
-                MADE BY <a href="#">KAUANE</a>
+                MADE BY <a href="https://github.com/kausdr" target="blank">KAUANE</a>
             </p>
             <p id="obs2">
-                ALL  COPYRIGHTS OF CONTENT RESERVED TO <a href="#">RIOT GAMES</a>
+                ALL  COPYRIGHTS OF CONTENT RESERVED TO <a href="https://www.riotgames.com/pt-br" target="blank">RIOT GAMES</a>
             </p>
         </div>
     </footer>
