--- a/pagina/html/index.html
+++ b/pagina/html/index.html
@@ -21,10 +21,10 @@
             </label>
             <nav id="menuzin">
                 <ul class="menu">
-                    <li><a href="#">Riot Games</a></li>
-                    <li><a href="#">Agentes</a></li>
-                    <li><a href="#">Mapas</a></li>
-                    <li><a href="#">Funções</a></li>
+                    <li><a href="https://www.riotgames.com/pt-br" target="blank">Riot Games</a></li>
+                    <li><a href="naodisponivel.html">Agentes</a></li>
+                    <li><a href="naodisponivel.html">Mapas</a></li>
+                    <li><a href="naodisponivel.html">Funções</a></li>
                 </ul>
             </nav>
         </div>
@@ -162,10 +162,10 @@
             <p id="obs1">
                 THIS WEBSITE WAS MADE FOR STUDY PURPOSES ONLY<br>
                 MADE TO STUDY HTML, CSS AND JAVASCRIPT<br>
-                MADE BY <a href="#">KAUANE</a>
+                MADE BY <a href="https://github.com/kausdr" target="blank">KAUANE</a>
             </p>
             <p id="obs2">
-                ALL  COPYRIGHTS OF CONTENT RESERVED TO <a href="#">RIOT GAMES</a>
+                ALL  COPYRIGHTS OF CONTENT RESERVED TO <a href="https://www.riotgames.com/pt-br" target="blank">RIOT GAMES</a>
             </p>
         </div>
     </footer>
